# 3dprintd

./: .gitignore  Cargo.toml  Dockerfile  test.py
.github/workflows/: deploy-testing.yaml
ci/test/: Dockerfile
src/: args.rs  log.rs  main.rs  util.rs
src/api/: axis.rs  error.rs  gcode.rs  mod.rs  values.rs
src/api/endpoints/: axis.rs  error.rs  gcode.rs  heating.rs  mod.rs
src/comms/: mod.rs
src/config/: mod.rs  motors.rs
src/decode/: decoder.rs  error.rs  mod.rs
src/execute/: executor.rs  mod.rs
src/execute/executor/: mod.rs
src/execute/motors/: mod.rs
src/gcode/: action.rs  decoder.rs  error.rs  executor.rs  mod.rs
src/hw/: callbacks.rs  comms.rs  control.rs  mod.rs  state.rs
src/hw/decode/: control.rs  decoder.rs  error.rs  file_decoder.rs  inner_decoder.rs  mod.rs  parser.rs  threaded_decoder.rs
src/hw/execute/: control.rs  mod.rs
src/hw/execute/executor/: mod.rs
src/hw/execute/motors/: error.rs  mod.rs
src/hw/pi/: error.rs  mod.rs  pi.rs
src/motors/: error.rs  mod.rs
src/settings/: mod.rs
src/settings/config/: args.rs  mod.rs  motors.rs
test/: conftest.py
test/api/: test_axis.py  test_estop.py  test_gcode.py
test_data/: base_cfg.toml
test_data/gcode/: benchy_first_layer.gcode  benchy_very_short.gcode
