[package]
name = "_3dprintd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "3dprintd"
path = "src/main.rs"

[dependencies]
rocket = "0.5.0-rc.2"
gcode = "0.6.1"
figment = { version = "0.10.6", features = ["toml"]}
serde = { version = "1.0.139", features = ["derive"]}
serialport = "4.2.0"
crossbeam = "0.8.1"
anyhow = "1.0.58"
clap = { version = "3.2.12", features = ["derive"] }
log = "0.4.17"
# temporary, will be switched with a more fitting logger once we get to that
stderrlog = "0.5.3"
revpi = { git = "https://github.com/PS-3D/revpi-rs", branch = "dev", version = "0.1.0" }
nanotec-stepper-driver = { git = "https://github.com/PS-3D/nanotec-stepper-driver", branch = "dev", version = "0.1.0" }
