[package]
name = "ps3dprintd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ps3dprintd"
path = "src/main.rs"

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'

[dependencies]
# chose 5 instead of 4 even tho 5 isn't out yet due to 5 having an option
# to shutdown rocket properly and not just killing the process
rocket = { version = "0.5.0-rc.2", features = ["json"] }
# this version of gcode fixes errors in parsing, see https://github.com/Michael-F-Bryan/gcode-rs/issues/44
gcode = {git = "https://github.com/jmbeck15/gcode-rs", branch = "fix-newline-detection", version = "0.6.2-alpha.0"}
figment = { version = "0.10.6", features = ["toml"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.85"
serialport = "4.2.0"
crossbeam = "0.8.1"
anyhow = "1.0.58"
clap = { version = "3.2.12", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
revpi = { git = "https://github.com/PS-3D/revpi-rs", branch = "dev", version = "0.1.0", features = ["macro"] }
nanotec-stepper-driver = { git = "https://github.com/PS-3D/nanotec-stepper-driver", branch = "dev", version = "0.1.0" }
num-traits = "0.2.15"
thiserror = "1.0.37"
indexmap = "1.9.1"
